# uav-command-control

./: README.md  install.sh
ros-pkg/: CMakeLists.txt  package.xml
ros-pkg/launch/: groundsystem_demo.launch  start_commands.launch
ros-pkg/src/: ClientROSController.cpp  ClientROSController.h  CommandTCPConnection.cpp  CommandTCPConnection.h  CommandTCPServer.cpp  CommandTCPServer.h  navgoalcommand.proto  searchrequest.proto  uas_server.cpp
scripts/: add_ground_system_peer.sh
