<?xml version="1.0"?>
<package>
  <name>groundsystem_communication</name>
  <version>0.0.0</version>
  <description>The groundsystem_communication package</description>

  <maintainer email="tyler@todo.todo">tyler</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>roscpp</build_depend>



  <build_depend>geometry_msgs</build_depend>
  <build_depend>hector_quadrotor_interface</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hector_uav_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>



  <run_depend>actionlib</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>roscpp</run_depend>


  <run_depend>actionlib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>hector_uav_msgs</run_depend>
  <run_depend>hector_quadrotor_interface</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>image_transport</run_depend>



  <export>

  </export>
</package>
